# aurora_test_app

./: CMakeLists.txt  README.md  ru.auroraos.aurora_test_app.desktop
qml/cover/: DefaultCoverPage.qml
rpm/: ru.auroraos.aurora_test_app.changes.in  ru.auroraos.aurora_test_app.changes.run.in  ru.auroraos.aurora_test_app.spec
src/: main.cpp
translations/: aurora_test_app-ru.ts  aurora_test_app.ts
